// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticketNavbar reducer optimisticAccountSettingsReset action should reset the account settings 1`] = `
{
  "optimisticAccountSettings": {
    "view_sections": {},
    "views": {},
    "views_bottom": {},
    "views_top": {},
  },
  "optimisticUserSettings": {
    "view_sections": {},
    "views": {},
    "views_bottom": {},
    "views_top": {},
  },
}
`;

exports[`ticketNavbar reducer optimisticAccountSettingsSet action should set the account settings 1`] = `
{
  "optimisticAccountSettings": {
    "view_sections": {
      "1": {
        "display_order": 2,
      },
    },
    "views": {
      "1": {
        "display_order": 1,
      },
    },
    "views_bottom": {},
    "views_top": {},
  },
  "optimisticUserSettings": {
    "view_sections": {},
    "views": {},
    "views_bottom": {},
    "views_top": {},
  },
}
`;

exports[`ticketNavbar reducer optimisticUserSettingsReset action should reset the user settings 1`] = `
{
  "optimisticAccountSettings": {
    "view_sections": {},
    "views": {},
    "views_bottom": {},
    "views_top": {},
  },
  "optimisticUserSettings": {
    "view_sections": {},
    "views": {},
    "views_bottom": {},
    "views_top": {},
  },
}
`;

exports[`ticketNavbar reducer optimisticUserSettingsSet action should set the user settings 1`] = `
{
  "optimisticAccountSettings": {
    "view_sections": {},
    "views": {},
    "views_bottom": {},
    "views_top": {},
  },
  "optimisticUserSettings": {
    "view_sections": {
      "1": {
        "display_order": 2,
      },
    },
    "views": {
      "1": {
        "display_order": 1,
      },
    },
  },
}
`;
